--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 
+    <!--bootstrap cdn-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!--fontawesome cdn-->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
 
@@ -19,91 +22,91 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom">
-                <div class="container">
+            <div class="container">
 
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyBlog</a>
 
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-row">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-row">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                        </li>
+                        @if (User.IsInRole("Owner"))
+                        {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Series" asp-action="Index">Series</a>
                             </li>
-                            @if (User.IsInRole("Owner"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Series" asp-action="Index">Series</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
-                                </li>
-                             }
-
-                            </ul>
-                        <ul class="navbar-nav flex-row justify-content-end">
                             <li class="nav-item">
-                                <partial name="_LoginPartial" />
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
                             </li>
-                        </ul>
-                    </div>
+                        }
+
+                    </ul>
+                    <ul class="navbar-nav flex-row justify-content-end">
+                        <li class="nav-item">
+                            <partial name="_LoginPartial" />
+                        </li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white box-shadow">
-                <div class="container">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white box-shadow">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
 
-                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-row small">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SeriesIndex">by Series: </a>
-                            </li>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-row small">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SeriesIndex">by Series: </a>
+                        </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATABASES</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">LAYOUTS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">LEARNING</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="5">PROJECTS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex"asp-route-id="6">TOOLS</a>
-                            </li>
-                        </ul>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATABASES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">LAYOUTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">LEARNING</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="5">PROJECTS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="6">TOOLS</a>
+                        </li>
+                    </ul>
 
-                        <ul class="navbar-nav ml-auto mb-2 mb-md-0 small">
-                            <li class="nav-item">
-                                <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
-                                    <form asp-action="SearchIndex" asp-controller="Articles">
-                                        <div class="input-group btn-group-sm">
-                                            <input type="text" name="SearchTerm" class="form-control" placeholder="Search Articles">
-                                            <button class="btn btn-outline-dark px-2 px-md-4" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                                        </div>
-                                    </form>
+                    <ul class="navbar-nav ml-auto mb-2 mb-md-0 small">
+                        <li class="nav-item">
+                            <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
+                                <form asp-action="SearchIndex" asp-controller="Articles">
+                                    <div class="input-group btn-group-sm">
+                                        <input type="text" name="SearchTerm" class="form-control" placeholder="Search Articles">
+                                        <button class="btn btn-outline-dark px-2 px-md-4" type="submit"><i class="fa fa-search"></i></button>
+                                    </div>
+                                </form>
 
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
 
-</header>
-    <div class="container">
+    </header>
+    <div class="container pb-5">
         <main role="main" class="pb-3 pt-3">
             @RenderBody()
         </main>
