--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MyBlog</title>
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-
     <!--bootstrap cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--custom style-->
+    <link rel="stylesheet" href="~/css/site.css" />
 
     <!--fontawesome cdn-->
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -33,6 +33,9 @@
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-row">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://lfost42-portfolio.netlify.app/">About Me</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
@@ -58,12 +61,6 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white box-shadow">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-row small">
                         <li class="nav-item">
@@ -71,13 +68,10 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATABASES</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">LAYOUTS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="4">LEARNING</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="5">PROJECTS</a>
@@ -85,20 +79,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="6">TOOLS</a>
                         </li>
-                    </ul>
-
-                    <ul class="navbar-nav ml-auto mb-2 mb-md-0 small">
-                        <li class="nav-item">
-                            <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2">
-                                <form asp-action="SearchIndex" asp-controller="Articles">
-                                    <div class="input-group btn-group-sm">
-                                        <input type="text" name="SearchTerm" class="form-control" placeholder="Search Articles">
-                                        <button class="btn btn-outline-dark px-2 px-md-4" type="submit"><i class="fa fa-search"></i></button>
-                                    </div>
-                                </form>
-
-                            </div>
-                        </li>
+                        <hr />
                     </ul>
                 </div>
             </div>
@@ -112,11 +93,42 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <div class="container">
+        <form asp-action="SearchIndex" asp-controller="Articles">
+            <div class="input-group btn-group-sm">
+                <input type="text" name="SearchTerm" class="form-control" placeholder="Search Articles">
+                <button class="btn btn-outline-dark px-2 px-md-4" type="submit"><i class="fa fa-search"></i></button>
+            </div>
+        </form>
+    </div>
+
+    <!-- Footer -->
+    <section id="footer">
         <div class="container">
-            &copy; 2022 - MyBlog | Lynda Foster
+            <ul class="copyright icons ">
+                <li>
+                    Copyright &copy;2022 | Lynda Foster<br />
+                </li>
+                <li><a href="https://github.com/lfost42">
+                    <i class="icon brands fab fa-github fs-4"></i></a></li>
+                <li>
+                    <a href="https://www.reddit.com/user/lynda_">
+                        <i class="icon brands fab fa-twitter fs-4"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/user/lfost42">
+                        <i class="icon brands fab fa-reddit-alien fs-4"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/lynda-foster/">
+                        <i class="icon brands fab fa-linkedin fs-4"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
-    </footer>
+    </section>
 
     <!-- Bootstrap core JS-->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
