--- a/BlogUI/wwwroot/css/site.css
+++ b/BlogUI/wwwroot/css/site.css
@@ -3669,16 +3669,40 @@ div a.card, div div.card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
-li .page-item:active a .page-link:active {
-    background-color: black;
-    color: white;
-    border-color: gray;
-    text-decoration: none;
+.page-link:hover {
+    z-index: 2;
+    color: black;
+    background-color: #f2f9ff;
+    border-color: #afc9c3;
 }
 
-li .page-item:link, a .page-link:link {
+.page-link:focus {
+    z-index: 3;
     color: black;
-    background-color: white;
-    border-color: gray;
-    text-decoration: none;
+    background-color: #dfebe8;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem #7cafa3;
+}
+
+.page-item:not(:first-child) .page-link {
+    margin-left: -1px;
+}
+
+
+.page-item.active .page-link {
+    z-index: 3;
+    color: black;
+    background-color: #dfebe8;
+    border-color: #afc9c3;
+}
+
+.page-item.disabled .page-link {
+    color: #8b8d8f;
+    pointer-events: none;
+    background-color: #fff;
+    border-color: #e4f2f1;
+}
+
+.page-link {
+    padding: 0.375rem 0.75rem;
 }
