--- a/BlogUI/Views/Articles/Create.cshtml
+++ b/BlogUI/Views/Articles/Create.cshtml
@@ -55,10 +55,10 @@
                             </div>
                             <div class="row mt-2 ">
                                 <div class="col d-flex align-items-center justify-content-center">
-                                    <button onclick="AddTag()" name="Add" type="button" class="btn btn-block btn-outline-dark">Add</button>
+                                    <button onclick="AddTag()" name="Add" type="button" class="button mt-1">Add</button>
                                 </div>
                                 <div class="col d-flex align-items-center justify-content-center">
-                                    <button onclick="DeleteTag()" name="Delete" type="button" class="btn btn-block btn-outline-dark">Delete</button>
+                                    <button onclick="DeleteTag()" name="Delete" type="button" class="button mt-1">Delete</button>
                                 </div>
                             </div>
                         </div>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit" value="Create" class="btn btn-primary btn-block">Create</button>
+                <button type="submit" value="Create" class="button mt-1">Create</button>
             </div>
         </form>
     </div>
