--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -159,10 +159,10 @@
                                         <div class="form-group">
                                             <div class="row mt-1">
                                                 <div class="col">
-                                                    <button class="btn btn-sm btn-outline-dark" type="submit">Submit</button>
+                                                    <button class="button mt-1" type="submit">Submit</button>
                                                 </div>
                                                 <div class="col">
-                                                    <button class="btn btn-sm btn-outline-dark" type="button" data-dismiss="modal">Close</button>
+                                                    <button class="button mt-1" type="button" data-dismiss="modal">Close</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -191,10 +191,10 @@
                                         </div>
                                         <div class="row mt-1">
                                             <div class="col-auto">
-                                                <button class="btn btn-sm btn-outline-dark" type="submit">Submit</button>
+                                                <button class="button mt-1" type="submit">Submit</button>
                                             </div>
                                             <div class="col-auto">
-                                                <button type="button" class="btn btn-sm btn-outline-dark" data-dismiss="modal">Close</button>
+                                                <button type="button" class="button mt-1" data-dismiss="modal">Close</button>
                                             </div>
                                         </div>
                                     </form>
