--- a/BlogUI/Views/Articles/Edit.cshtml
+++ b/BlogUI/Views/Articles/Edit.cshtml
@@ -53,15 +53,15 @@
                     </div>
                     <div class="row mt-2 ">
                         <div class="col d-flex align-items-center justify-content-center">
-                            <button onclick="AddTag()" name="Add" type="button" class="btn btn-block btn-outline-dark">Add</button>
+                            <button onclick="AddTag()" name="Add" type="button" class="button mt-1">Add</button>
                         </div>
                         <div class="col d-flex align-items-center justify-content-center">
-                            <button onclick="DeleteTag()" name="Delete" type="button" class="btn btn-block btn-outline-dark">Delete</button>
+                            <button onclick="DeleteTag()" name="Delete" type="button" class="button mt-1">Delete</button>
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <select class="btn-block" name="TagValues" id="TagList" multiple></select>
+                <div class="col mt-1">
+                    <select class="button" name="TagValues" id="TagList" multiple></select>
                 </div>
             </div>
             </div>
@@ -78,8 +78,8 @@
             </div>
 
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group mt-1">
+                <input type="submit" value="Save" class="button" />
             </div>
         </form>
     </div>
