--- a/BlogUI/Views/Series/Create.cshtml
+++ b/BlogUI/Views/Series/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="button mt-1" />
             </div>
         </form>
     </div>
