--- a/BlogUI/Views/Series/Edit.cshtml
+++ b/BlogUI/Views/Series/Edit.cshtml
@@ -32,7 +32,7 @@
                 <span asp-validation-for="Image.Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="button mt-1" />
             </div>
         </form>
     </div>
