--- a/BlogUI/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/Logout.cshtml
@@ -10,7 +10,7 @@
         if (User.Identity.IsAuthenticated)
         {
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+                <button type="submit" class="nav-link button mt-1">Click here to Logout</button>
             </form>
         }
         else
