--- a/BlogUI/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -20,6 +20,6 @@
 
 <div>
     <form method="post" class="form-group">
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
+        <button class="button mt-1" type="submit">Disable 2FA</button>
     </form>
 </div>
