--- a/BlogUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -25,7 +25,7 @@
                     <span asp-validation-for="Input.Image" class="text-danger"></span>
                 </div>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="button mt-1">Save</button>
         </form>
     </div>
     <div class="col-md-6">
