--- a/BlogUI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/Register.cshtml
@@ -44,7 +44,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="button mt-1">Register</button>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
@@ -68,7 +68,7 @@
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="button mt-1" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
