--- a/BlogUI/Views/Home/Contact.cshtml
+++ b/BlogUI/Views/Home/Contact.cshtml
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div id="success"></div>
-                <button type="submit" class="btn btn-primary rounded-2 shadow-sm" id="sendMessageButton">Send</button>
+                <button type="submit" class="button mt-1" id="sendMessageButton">Send</button>
             </form>
         </div>
     </div>
