--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -95,9 +95,9 @@
 
     <div class="container">
         <form asp-action="SearchIndex" asp-controller="Articles">
-            <div class="input-group button mt-1">
+            <div class="input-group btn-group-sm">
                 <input type="text" name="SearchTerm" class="form-control" placeholder="Search Articles">
-                <button class="button mt-1" type="submit"><i class="fa fa-search"></i></button>
+                <button class="btn btn-outline-dark px-2 px-md-4" type="submit"><i class="fa fa-search"></i></button>
             </div>
         </form>
     </div>
