--- a/BlogUI/wwwroot/css/site.css
+++ b/BlogUI/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-﻿@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -3457,6 +3457,11 @@ body.single #wrapper {
 
 ul.icons li a {
     color: #dedede;
+    text-decoration: none;
+}
+
+ul.icons li a:hover {
+    color: #2ebaae;
     text-decoration: none;
 }
 
