--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -62,9 +62,9 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white box-shadow">
             <div class="container">
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-row small">
+                    <ul class="navbar-nav flex-row small author">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SeriesIndex">by Series: </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SeriesIndex">Series</a>
                         </li>
 
                         <li class="nav-item">
