--- a/BlogUI/Views/Home/SeriesIndex.cshtml
+++ b/BlogUI/Views/Home/SeriesIndex.cshtml
@@ -34,7 +34,7 @@
         {
 <div class="col-lg-6 col-md-6 mx-auto mb-2 contents-justify-start">
     <div class="card p-4 h-100">
-        <a asp-controller="Series" asp-action="Details" asp-route-id="@item.Id">
+        <a asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="@item.Id">
 
             @if (item.Image != null)
             {
