added menu scroll

--- a/BlogUI/Views/Articles/ArticleIndex.cshtml
+++ b/BlogUI/Views/Articles/ArticleIndex.cshtml
@@ -22,7 +22,7 @@
 @if (User.IsInRole("Owner"))
 {
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create" class="owner">Create New</a>
     </p>
 }
 
