--- a/BlogUI/Views/Series/Index.cshtml
+++ b/BlogUI/Views/Series/Index.cshtml
@@ -11,7 +11,7 @@
 @if (User.IsInRole("Owner"))
 {
     <p>
-        <a asp-action="Create">Create New</a>
+        <a asp-action="Create" class="owner">Create New</a>
     </p>
 }
 
@@ -50,14 +50,14 @@
                 <td>
                     @if (User.IsInRole("Owner"))
                     {
-                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                     <a asp-action="Edit" asp-route-id="@item.Id" class="owner">Edit</a>
                     }
 
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a>
 
                     @if (User.IsInRole("Owner"))
                     {
-                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                     <a asp-action="Delete" asp-route-id="@item.Id" class="owner">Delete</a>
                     }
                     
                 </td>
